--- a/themes/foundation/templates/html/nexus/hero.html
+++ b/themes/foundation/templates/html/nexus/hero.html
@@ -16,7 +16,7 @@
                             </div>
                         </a>
                         <div data-ng-if="item.TagIconSrc" class="right element-link">
-                            <div class="element-link-image">
+                            <div class="element-link-image" title="{{ item.TagTitle }}">
                                 <img class="icon-frame frame-56" data-ng-src="{{ item.TagIconSrc}}" />
                             </div>
                         </div>
@@ -50,7 +50,7 @@
                             </div>
                         </a>
                         <div data-ng-if="item.TagIconSrc" class="right element-link">
-                            <div class="element-link-image">
+                            <div class="element-link-image" title="{{ item.TagTitle }}">
                                 <img class="icon-frame frame-56" data-ng-src="{{ item.TagIconSrc}}" />
                             </div>
                         </div>
@@ -89,7 +89,7 @@
                         <img class="icon-frame frame-56" data-ng-src="{{ item.mate.IconSrc }}" />
                     </div>
                 </a>
-                <div data-ng-if="item.TagIconSrc" class="right element-link">
+                <div data-ng-if="item.TagIconSrc" class="right element-link" title="{{ item.TagTitle }}">
                     <div class="element-link-image">
                         <img class="icon-frame frame-56" data-ng-src="{{ item.TagIconSrc}}" />
                     </div>
@@ -106,6 +106,11 @@
                 <div data-ng-if="item.SkinOwnerID != 0" class="element-link">
                     <div class="element-link-image">
                         <img class="icon-frame frame-56" data-ng-src="{{ item.OwnerIconSrc }}" />
+                    </div>
+                </div>
+                <div data-ng-if="item.TagIconSrc" class="right element-link" title="{{ item.TagTitle }}">
+                    <div class="element-link-image">
+                        <img class="icon-frame frame-56" data-ng-src="{{ item.TagIconSrc}}" />
                     </div>
                 </div>
                 <div class="phrase" data-ng-bind-html="item.Phrase | unsafe"></div>
