--- a/themes/foundation/templates/html/common/breadcrumbs.html
+++ b/themes/foundation/templates/html/common/breadcrumbs.html
@@ -1,7 +1,7 @@
 <ul class="breadcrumbs">
     <li data-ng-repeat="item in breadcrumbs.items()" data-ng-class="{ current: $last && !$first}">
-        <a target="_self" data-ng-href="{{ item.Link }}" data-ng-if="$first">{{ item.Title }}</a>
-        <a data-ng-href="{{ item.Link }}" data-ng-if="!$last && !$first">{{ item.Title }}</a>
-        <span data-ng-if="$last && !$first">{{ item.Title }}</span>
+        <a target="_self" data-ng-href="{{ item.Link }}" data-ng-if="item.Self == true">{{ item.Title }}</a>
+        <a data-ng-href="{{ item.Link }}" data-ng-if="!$last && !item.Self">{{ item.Title }}</a>
+        <span data-ng-if="$last">{{ item.Title }}</span>
     </li>
 </ul>
